<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp"
        tools:context=".view.SimpleCalculatorActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/calculatorCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/resultsTitleCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/numberOneTV"
                    style="@style/CustomTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/number_one_text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/numberOneET"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            <EditText
                    android:id="@+id/numberOneET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/enter_number_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numberOneTV"
                    tools:text="9" />

            <TextView
                    android:id="@+id/numberTwoTV"
                    style="@style/CustomTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/number_two_text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/numberTwoET"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/numberOneTV"
                    app:layout_constraintTop_toBottomOf="@id/numberOneET" />

            <EditText
                    android:id="@+id/numberTwoET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/enter_number_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numberTwoTV"
                    tools:text="6" />

            <TextView
                    android:id="@+id/operationTV"
                    style="@style/CustomTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/operation_text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/operationSelect"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/numberOneTV"
                    app:layout_constraintTop_toBottomOf="@id/numberTwoET" />

            <Spinner
                    android:id="@+id/operationSelect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:entries="@array/operations_array"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@id/calculateBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/operationTV"
                    tools:entries="@array/operations_array" />

            <Button
                    android:id="@+id/calculateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/calculate_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/operationSelect" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/resultsTitleCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@+id/listGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculatorCard">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/results_text"
                android:textColor="@color/colorAccent" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/listGroup"
            app:layout_constraintEnd_toEndOf="@id/listGroup"
            app:layout_constraintStart_toStartOf="@id/listGroup"
            app:layout_constraintTop_toTopOf="@id/listGroup"
            tools:listitem="@layout/calculation_result_list_item" />

    <TextView
            android:id="@+id/emptyListTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_calculation_results_yet"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/listGroup"
            app:layout_constraintEnd_toEndOf="@id/listGroup"
            app:layout_constraintStart_toStartOf="@id/listGroup"
            app:layout_constraintTop_toTopOf="@id/listGroup" />

    <androidx.constraintlayout.widget.Group
            android:id="@+id/listGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsTitleCard" />


</androidx.constraintlayout.widget.ConstraintLayout>